<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddEditFragment">

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/til_add_edit"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content">-->

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_title_add_edit_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="Title" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_content_add_edit_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_title_add_edit_fragment"
            android:layout_margin="16dp"

            android:hint="Content" />
<!--    </com.google.android.material.textfield.TextInputLayout>-->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_done"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        />

</RelativeLayout>